kubernetes/apps/default/baserow/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baserow
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    # nginx.ingress.kubernetes.io/auth-method: GET
    # nginx.ingress.kubernetes.io/auth-url: http://authelia.networking.svc.cluster.local/api/verify
    # nginx.ingress.kubernetes.io/auth-signin: https://authelia.${SECRET_DOMAIN}?rm=$request_method
    # nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    # nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
    hajimari.io/enable: "true"
spec:
  ingressClassName: external
  rules:
    - host: "baserow.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baserow
                port:
                  number: 80
  tls:
    - hosts:
        - "baserow.${SECRET_DOMAIN}"
